@@ -863,20 +863,20 @@ struct command command_tab[] = {
     { { NULL } }, N_("count (number of entries)") },
   { S(delete), T_CMD,
     checkdb, delete_handler, NULL,
-    { { N_("key"), ARG_DATUM, DS_KEY }, { NULL } }, N_("delete") },
+    { { N_("KEY"), ARG_DATUM, DS_KEY }, { NULL } }, N_("delete a record") },
   { S(export), T_CMD,
     checkdb, export_handler, NULL,
-    { { N_("file"), ARG_STRING },
+    { { N_("FILE"), ARG_STRING },
       { "[truncate]", ARG_STRING },
       { "[binary|ascii]", ARG_STRING },
       { NULL } },
     N_("export") },
   { S(fetch), T_CMD,
     checkdb, fetch_handler, NULL,
-    { { N_("key"), ARG_DATUM, DS_KEY }, { NULL } },  N_("fetch") },
+    { { N_("KEY"), ARG_DATUM, DS_KEY }, { NULL } },  N_("fetch record") },
   { S(import), T_CMD,
     NULL, import_handler, NULL,
-    { { N_("file"), ARG_STRING },
+    { { N_("FILE"), ARG_STRING },
       { "[replace]", ARG_STRING },
       { "[nometa]" , ARG_STRING },
       { NULL } },
@@ -886,13 +886,13 @@ struct command command_tab[] = {
     { { NULL } }, N_("list") },
   { S(next), T_CMD,
     checkdb, nextkey_handler, NULL,
-    { { N_("[key]"), ARG_STRING },
+    { { N_("[KEY]"), ARG_STRING },
       { NULL } },
     N_("nextkey") },
   { S(store), T_CMD,
     checkdb, store_handler, NULL,
-    { { N_("key"), ARG_DATUM, DS_KEY },
-      { N_("data"), ARG_DATUM, DS_CONTENT },
+    { { N_("KEY"), ARG_DATUM, DS_KEY },
+      { N_("DATA"), ARG_DATUM, DS_CONTENT },
       { NULL } },
     N_("store") },
   { S(first), T_CMD,
@@ -906,7 +906,7 @@ struct command command_tab[] = {
     { { NULL } }, N_("print avail list") }, 
   { S(bucket), T_CMD,
     print_bucket_begin, print_current_bucket_handler, NULL,
-    { { N_("bucket-number"), ARG_STRING },
+    { { N_("NUMBER"), ARG_STRING },
       { NULL } }, N_("print a bucket") },
   { S(current), T_CMD,
     print_current_bucket_begin, print_current_bucket_handler, NULL,
@@ -917,10 +917,10 @@ struct command command_tab[] = {
     { { NULL } }, N_("print hash directory") },
   { S(header), T_CMD,
     print_header_begin , print_header_handler, NULL,
-    { { NULL } }, N_("print file header") },
+    { { NULL } }, N_("print database file header") },
   { S(hash), T_CMD,
     checkdb, hash_handler, NULL,
-    { { N_("key"), ARG_DATUM, DS_KEY },
+    { { N_("KEY"), ARG_DATUM, DS_KEY },
       { NULL } }, N_("hash value of key") },
   { S(cache), T_CMD,
     print_cache_begin, print_cache_handler, NULL,
@@ -939,25 +939,25 @@ struct command command_tab[] = {
     { { NULL } }, N_("quit the program") },
   { S(set), T_SET,
     NULL, NULL, NULL,
-    { { "[var=value...]" }, { NULL } }, N_("set or list variables") },
+    { { "[VAR=VALUE...]" }, { NULL } }, N_("set or list variables") },
   { S(unset), T_UNSET,
     NULL, NULL, NULL,
-    { { "var..." }, { NULL } }, N_("unset variables") },
+    { { "VAR..." }, { NULL } }, N_("unset variables") },
   { S(define), T_DEF,
     NULL, NULL, NULL,
     { { "key|content", ARG_STRING },
-      { "{ field-list }", ARG_STRING },
-      { NULL } }, N_("define structure") },
+      { "{ FIELD-LIST }", ARG_STRING },
+      { NULL } }, N_("define datum structure") },
   { S(source), T_CMD,
     NULL, source_handler, NULL,
-    { { "file", ARG_STRING },
+    { { "FILE", ARG_STRING },
       { NULL } }, N_("source command script") },
   { S(close), T_CMD,
     NULL, close_handler, NULL,
     { { NULL } }, N_("close the database") },
   { S(open), T_CMD,
     NULL, open_handler, NULL,
-    { { "file", ARG_STRING }, { NULL } },
+    { { "FILE", ARG_STRING }, { NULL } },
     N_("open new database") },
 #undef S
   { 0 }
